--- a/CSS/Live_Investments_Btn.css
+++ b/CSS/Live_Investments_Btn.css
@@ -1,8 +1,64 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #2b2b2b;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+}
+
+a {
+    text-decoration: none;
+    color: green;
+}
+
+.Header {
+    background: linear-gradient(to right, rgb(255, 182, 48), rgb(238, 255, 0));
+    text-align: center;
+    margin-top: 0;
+    position: relative;
+    width: 100%;
+    padding-top: 10px;
+}
+
+.Content {
+    color: aliceblue;
+    font-size: small;
+    font-weight: bold;
+    width: 100%;
+    text-align: left;
+    padding: 20px;
+    padding-left: 50px;
+}
+
+.Footer {
+    background: linear-gradient(to right, rgb(255, 182, 48), rgb(238, 255, 0));
+    text-align: center;
+    margin-top: 0;
+    position: relative;
+    color: rgb(0, 0, 0);
+    width: 100%;
+    padding-top: 10px;
+}
+
+#H1_Header {
+    color: black;
+    font-weight: bold;
+}
+
 .All_Companys {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.Plan {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 button.Company_Box {
@@ -43,12 +99,20 @@ button.Company_Box:hover {
 }
 
 @media (min-width: 600px) {
-    .All_Companys {
-        flex-direction: row;
+    .Plan {
+        width: auto;
     }
 
-    button.Company_Box {
-        width: auto;
+    .All_Companys {
+        flex-direction: row;
+        text-align: center;
+        justify-content: space-around;
+    }
+
+    #Small_Text {
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
     }
 }
 
@@ -113,4 +177,16 @@ button.Company_Box:hover {
     color: white;
     margin-top: 10px;
     font-weight: bold;
+}
+
+#Small_Text {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+}
+
+@media (max-width: 600px) {
+    #Small_Text {
+        margin-top: 15px;
+    }
 }
