--- a/CSS/Structure.css
+++ b/CSS/Structure.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #2b2b2b;
+    background-color: #1d1f21;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -11,11 +11,11 @@ body {
 
 a {
     text-decoration: none;
-    color: Green;
+    color: #00c853;
 }
 
 .Header {
-    background: linear-gradient(to right, rgb(255, 182, 48), rgb(238, 255, 0));
+    background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
     text-align: center;
     margin-top: 0;
     position: relative;
@@ -24,7 +24,7 @@ a {
 }
 
 .Content {
-    color: aliceblue;
+    color: #eceff1;
     font-size: small;
     font-weight: bold;
     width: 100%;
@@ -34,16 +34,16 @@ a {
 }
 
 .Footer {
-    background: linear-gradient(to right, rgb(255, 182, 48), rgb(238, 255, 0));
+    background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
     text-align: center;
     margin-top: 0;
     position: relative;
-    color: rgb(0, 0, 0);
+    color: #000000;
     width: 100%;
     padding-top: 10px;
 }
- 
+
 #H1_Header {
-    color: black;
+    color: #000000;
     font-weight: bold;
 }
