--- a/CSS/Live_Investments_Btn.css
+++ b/CSS/Live_Investments_Btn.css
@@ -25,8 +25,8 @@ button.Company_Box {
     max-width: 600px;
 }
 
-button.Company_Box:hover {
-    background: linear-gradient(90deg, #66bb6a, #ffcc80);
+button.Company_Box:hover { 
+    background: linear-gradient(90deg, #90ff08, #cdff05); 
     color: #000000;
     font-weight: bold;
 }
