--- a/CSS/Btn.css
+++ b/CSS/Btn.css
@@ -2,7 +2,7 @@
   font-size: 24px;
   padding: 15px 30px;
   color: #000000;
-  background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
+  background: #2b2b2b ;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -12,6 +12,6 @@
 }
 
 .Btn:hover {
-  background: linear-gradient(90deg, #ab47bc, #ef5350, #66bb6a, #26c6da);
+  background: linear-gradient(90deg, #90ff08, #cdff05);
   color: #FFFFFF;
 }
