--- a/CSS/Btn.css
+++ b/CSS/Btn.css
@@ -2,16 +2,16 @@
   font-size: 24px;
   padding: 15px 30px;
   color: #000000;
-  background: #2b2b2b ;
+  background: linear-gradient(90deg, #90ff08, #cdff05) ;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
+  cursor: pointer; 
   transition: background 0.3s, color 0.3s;
-  font-weight: bold;
+  font-weight: bold; 
   align-self: center;
 }
 
 .Btn:hover {
   background: linear-gradient(90deg, #90ff08, #cdff05);
-  color: #FFFFFF;
+  color: #ffffff;
 }
