--- a/CSS/Shares.css
+++ b/CSS/Shares.css
@@ -1,3 +1,9 @@
+canvas {
+  width: 300px;
+  height: 300px;
+  background-color: transparent;
+  box-shadow: none;
+}
 
 table {
   border-collapse: collapse;
@@ -43,10 +49,26 @@ caption {
   font-weight: bold;
 }
 
-@media screen and (max-width: 768px) {
+#sharesTable th, #sharesTable td {
+  color: white;
+}
 
-  th,
-  td {
-    white-space: normal;
+#sharesTable td:nth-child(1) {
+  color: #ffff00;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    flex-direction: column;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  canvas {
+    order: -1;
   }
 }
